--- a/src/app/personnels/info-person/bonus-discipline/bonus-discipline.component.html
+++ b/src/app/personnels/info-person/bonus-discipline/bonus-discipline.component.html
@@ -1,4 +1,8 @@
-<form action="">
+<div class="form-item">
+  <div class="form-item-title">
+    Thông tin khen thưởng, kỷ luật
+  </div>
+  <form action="">
   <div class="action-form">
     <button>Khóa dữ liệu</button>
   </div>
@@ -83,6 +87,7 @@
   </div>
   <!---->
 </form>
+</div>
 
 
 <!--modal dialog khen thuong bonus-->
