--- a/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
@@ -1,5 +1,6 @@
-
-<form action="" [formGroup]="formCV" id="form-cv">
+<div class="form-item">
+  <div class="form-item-title">Sơ yếu lí lịch</div>
+    <form action="" [formGroup]="formCV" id="form-cv">
   <div class="action-form">
     <button>Ghi nhận</button>
     <button>Khóa dữ liệu</button>
@@ -181,7 +182,7 @@
 
       <div class="item-control">
         <label class="mgr-20 item-title" style="width:auto;">13, Nơi đăng kí hộ khẩu thường chú <span class="star">*</span></label>
-        <input style="width: 74%" formControlName="placeRegisterHouseHold" type="text"/>
+        <input style="width: 71%" formControlName="placeRegisterHouseHold" type="text"/>
         <span style="display: block">(Số nhà đường thành phố /  Thôn xóm xã huyện tỉnh )</span>
       </div>
     </div>
@@ -256,7 +257,7 @@
 
   </div>
 </form>
-
+</div>
 <!--So ho chieu -->
 <!--<div class="row place">-->
 <!--<div class="col-xs-12">-->
