--- a/src/app/personnels/info-person/foreign/foreign.component.html
+++ b/src/app/personnels/info-person/foreign/foreign.component.html
@@ -1,14 +1,12 @@
+<div class="form-item">
+  <div class="form-item-title">
+    Thông tin quá trình đi nước ngoài
+  </div>
 <form>
-  <div class="form-item">
-    <div class="form-item-title">
-      Thông tin quá trình đi nước ngoài
-    </div>
-    <div class="action-form" style="margin-bottom: 15px">
+    <div class="action-form" style="margin-bottom: 10px;">
       <button>Ghi nhận</button>
       <button>Khóa dữ liêu</button>
     </div>
-    <div class="row">
-      <div class="col-xs-12">
         <div class="table-responsive">
           <table class="table table-bordered">
             <thead>
@@ -46,10 +44,8 @@
             </tbody>
           </table>
         </div>
-      </div>
-    </div>
-  </div>
 </form>
+</div>
 
 
 <!--modal qua trinh hoat dong Doan-->
