--- a/src/app/personnels/info-person/language-teachnoly-politic/language-teachnoly-politic.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/language-teachnoly-politic.component.html
@@ -1,5 +1,11 @@
-<app-foreign-language></app-foreign-language>
+<div class="mgb-20" style="margin-bottom: 20px;">
+  <app-foreign-language></app-foreign-language>
+</div>
 <!---->
-<app-info-technology></app-info-technology>
+<div class="mgb-20" style="margin-bottom: 20px;">
+  <app-info-technology></app-info-technology>
+</div>
 <!---->
-<app-politic></app-politic>
+<div class="mgb-20" style="margin-bottom: 20px;">
+  <app-politic></app-politic>
+</div>
