--- a/src/app/personnels/info-person/process-teaching/process-teaching.component.html
+++ b/src/app/personnels/info-person/process-teaching/process-teaching.component.html
@@ -1,12 +1,13 @@
-<form action="" >
-  <div class="action-form">
-    <button>Ghi nhận </button>
-    <button>Khóa dữ liệu</button>
+<div class="form-item">
+  <div class="form-item-title">
+    Quá trình giảng dạy
   </div>
-  <div class="form-item">
-    <div class="form-item-title">
-      Quá trình giảng dạy
+  <form action="">
+    <div class="action-form" style="margin-bottom: 10px;">
+      <button>Ghi nhận</button>
+      <button>Khóa dữ liệu</button>
     </div>
+
     <div class="table-responsive">
       <table class="table table-bordered">
         <thead>
@@ -43,8 +44,9 @@
         </tbody>
       </table>
     </div>
-  </div>
-</form>
+
+  </form>
+</div>
 
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
 
