--- a/src/app/personnels/info-person/science-topic/science-topic.component.html
+++ b/src/app/personnels/info-person/science-topic/science-topic.component.html
@@ -1,14 +1,14 @@
-<form>
-  <div class="action-form">
-    <button>Ghi nhận</button>
-    <button>Khóa dữ liệu</button>
+<div class="form-item">
+  <div class="form-item-title">
+    Đề tài - dự án khoa học
   </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="form-item">
-        <div class="form-item-title">
-          Đề tài - dự án khoa học
-        </div>
+  <form>
+    <div class="action-form" style="margin-bottom: 10px;">
+      <button>Ghi nhận</button>
+      <button>Khóa dữ liệu</button>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
         <div class="table-responsive">
           <table class="table table-bordered">
             <thead>
@@ -50,9 +50,8 @@
         </div>
       </div>
     </div>
-  </div>
-</form>
-
+  </form>
+</div>
 
 <modal #topicModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
