--- a/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
+++ b/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
@@ -1,14 +1,14 @@
-<form>
-  <div class="action-form">
-    <button>Ghi nhận</button>
-    <button>Khóa dữ liệu</button>
+<div class="row form-item " style="margin-left: 0;margin-right: 0">
+  <div class="form-item-title">
+    Thông tin hướn dẫn luận văn/luận án
   </div>
-  <div class="row form-item " style="margin-left: 0;margin-right: 0">
-    <div class="form-item-title">
-      Thông tin hướn dẫn luận văn/luận án
+
+  <form>
+    <div class="action-form" style="margin-bottom: 10px;">
+      <button>Ghi nhận</button>
+      <button>Khóa dữ liệu</button>
     </div>
 
-    <div class="col-xs-12">
       <div class="table-responsive">
         <table class="table table-bordered">
           <thead>
@@ -45,11 +45,9 @@
           </tbody>
         </table>
       </div>
-    </div>
-  </div>
-  <!---->
-</form>
-
+    <!---->
+  </form>
+</div>
 
 <modal #thesisGuide size='lg' cssClass="my-modal-lg" backdrop="false">
 
