--- a/src/app/menu-app/menu-app.component.html
+++ b/src/app/menu-app/menu-app.component.html
@@ -1,4 +1,14 @@
-<ul [ngClass]="cssClass +' menu-app '">
-  <li *ngFor="let item of menus"><a routerLinkActive="active" [routerLink]="item.href">{{item.title}}</a></li>
+<ul [ngClass]="cssClass +' menu-app '" *ngIf="native != true">
+  <li *ngFor="let item of menus">
+    <a routerLinkActive="active" [routerLink]="item.href">{{item.title}}</a>
+  </li>
+</ul>
+
+<ul [ngClass]="cssClass +' menu-app '" *ngIf="native == true">
+  <li *ngFor="let item of menus;let i = index" >
+    <a  (click)="active('menu-app-item-'+i)"
+        [id]="'menu-app-item-'+i" routerLinkActive="active"
+        pageScroll  [pageScrollOffset]="100"
+        [href]="item.href" [style.color]="i==0?'#8d9c00':'#fff'" style="cursor: pointer" >{{item.title}}</a></li>
 </ul>
 
