--- a/src/app/personnels/info-person/academic-rank/academic-rank.component.html
+++ b/src/app/personnels/info-person/academic-rank/academic-rank.component.html
@@ -1,78 +1,81 @@
-<form action="">
-  <div class="action-form">
-    <button (click)="onSave()">Ghi nhận</button>
-    <button (click)="onSave()">Khóa dữ liệu</button>
-  </div>
-  <div class="form-item">
-    <div class="form-item-title">
-      Thông tin học hàm
+<div class="form-item">
+  <div class="form-item-title">Thông tin học hàm, danh hiệu nhà giáo </div>
+  <form action="">
+    <div class="action-form">
+      <button (click)="onSave()">Ghi nhận</button>
+      <button (click)="onSave()">Khóa dữ liệu</button>
     </div>
-    <div class="table-responsive">
-      <table class="table table-bordered">
-        <thead>
-        <tr>
-          <th>STT</th>
-          <th>Học hàm</th>
-          <th>Nơi công nhận</th>
-          <th>Năm phong</th>
-          <th>
-            <span class="action-icon" (click)="openModal(academicRank)"><i class="fa fa-plus"></i></span>
-          </th>
-        </tr>
-        </thead>
-        <tbody>
-        <!---->
-        <tr *ngFor="let item of listRankAd.toArray();let i = index ">
-          <td>{{i+1}}</td>
-          <td>{{item.rank}}</td>
-          <td>{{item.placeRiceive}}</td>
-          <td>{{item.yearReceive}}</td>
-          <td>
-            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-            <span class="action-icon"><i class="fa fa-lock"></i></span>
-          </td>
-        </tr>
+    <div class="form-item">
+      <div class="form-item-title">
+        Thông tin học hàm
+      </div>
+      <div class="table-responsive">
+        <table class="table table-bordered">
+          <thead>
+          <tr>
+            <th>STT</th>
+            <th>Học hàm</th>
+            <th>Nơi công nhận</th>
+            <th>Năm phong</th>
+            <th>
+              <span class="action-icon" (click)="openModal(academicRank)"><i class="fa fa-plus"></i></span>
+            </th>
+          </tr>
+          </thead>
+          <tbody>
+          <!---->
+          <tr *ngFor="let item of listRankAd.toArray();let i = index ">
+            <td>{{i+1}}</td>
+            <td>{{item.rank}}</td>
+            <td>{{item.placeRiceive}}</td>
+            <td>{{item.yearReceive}}</td>
+            <td>
+              <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+              <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+              <span class="action-icon"><i class="fa fa-lock"></i></span>
+            </td>
+          </tr>
 
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
-  <!---->
-  <div class="form-item">
-    <div class="form-item-title">
-      Danh hiệu nhà giáo
-    </div>
-    <div class="table-responsive">
-      <table class="table table-bordered">
-        <thead>
-        <tr>
-          <th>STT</th>
-          <th>Danh hiệu nhà giáo</th>
-          <th>Năm phong</th>
-          <th>
-            <span class="action-icon" (click)="openModal(titleTeachers)"><i class="fa fa-plus"></i></span>
-          </th>
-        </tr>
-        </thead>
+    <!---->
+    <div class="form-item">
+      <div class="form-item-title">
+        Danh hiệu nhà giáo
+      </div>
+      <div class="table-responsive">
+        <table class="table table-bordered">
+          <thead>
+          <tr>
+            <th>STT</th>
+            <th>Danh hiệu nhà giáo</th>
+            <th>Năm phong</th>
+            <th>
+              <span class="action-icon" (click)="openModal(titleTeachers)"><i class="fa fa-plus"></i></span>
+            </th>
+          </tr>
+          </thead>
 
-        <tbody>
-        <tr *ngFor="let item of listTitleTeachers.toArray();let i = index ">
-          <td>{{i+1}}</td>
-          <td>{{item.title}}</td>
-          <td>{{item.yearReceive}}</td>
-          <td>
-            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-            <span class="action-icon"><i class="fa fa-lock"></i></span>
-          </td>
-        </tr>
-        </tbody>
-      </table>
+          <tbody>
+          <tr *ngFor="let item of listTitleTeachers.toArray();let i = index ">
+            <td>{{i+1}}</td>
+            <td>{{item.title}}</td>
+            <td>{{item.yearReceive}}</td>
+            <td>
+              <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+              <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+              <span class="action-icon"><i class="fa fa-lock"></i></span>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
-  <!---->
-</form>
+    <!---->
+  </form>
+</div>
 
 
 <modal #academicRank size='lg' cssClass="my-modal-lg" backdrop="false">
