--- a/src/app/personnels/info-person/contract/contract.component.html
+++ b/src/app/personnels/info-person/contract/contract.component.html
@@ -1,13 +1,12 @@
-<form action="">
-  <div class="action-form mgb-20">
+<div class="form-item">
+  <div class="form-item-title">
+    Danh sách hợp đồng lao động
+  </div>
+  <form action="">
+  <div class="action-form" style="margin-bottom: 10px;">
     <button>Ghi nhận</button>
     <button>Khóa dữ liêu</button>
   </div>
-
-  <div class="form-item">
-    <div class="form-item-title">
-      Danh sách hợp đồng lao động
-    </div>
     <div class="table-responsive">
       <table class="table table-bordered">
         <thead>
@@ -44,8 +43,9 @@
         </tbody>
       </table>
     </div>
-  </div>
+
 </form>
+</div>
 
 
 <modal #modalContract size='lg' cssClass="my-modal-lg" backdrop="false">
