--- a/src/app/personnels/info-person/language-teachnoly-politic/politic/politic.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/politic/politic.component.html
@@ -1,53 +1,57 @@
-<form action="" [formGroup]="formDataMain">
+<div class="form-item">
+  <div class="form-item-title">
+    Trình độ chính trị
+  </div>
+  <form action="" [formGroup]="formDataMain">
   <div class="action-form mgb-20">
     <button (click)="onSave()">Ghi nhận</button>
     <button>Khóa dữ liệu</button>
   </div>
-  <div class="table-reponsive">
-    <table class="table table-bordered">
-      <thead>
-      <tr>
-        <th>STT</th>
-        <th>Trình độ chính trị</th>
-        <th>Năm công nhận</th>
-        <th>Hiện tại</th>
-        <th>
-          <span class="action-icon" (click)="openModal(politicModal)"><i class="fa fa-plus"></i></span>
-        </th>
-      </tr>
-      </thead>
-      <tbody>
-      <!--Content-->
-      <tr>
-        <td>1</td>
-        <td>{{item.level}}</td>
-        <td>{{item.yearLicense}}</td>
+    <div class="table-reponsive">
+      <table class="table table-bordered">
+        <thead>
+        <tr>
+          <th>STT</th>
+          <th>Trình độ chính trị</th>
+          <th>Năm công nhận</th>
+          <th>Hiện tại</th>
+          <th>
+            <span class="action-icon" (click)="openModal(politicModal)"><i class="fa fa-plus"></i></span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <!--Content-->
+        <tr>
+          <td>1</td>
+          <td>{{item.level}}</td>
+          <td>{{item.yearLicense}}</td>
 
-        <td><input type="radio" class="" formControlName="now" [value]="item.now"></td>
-        <td>
-          <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-          <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-          <span class="action-icon"><i class="fa fa-lock"></i></span>
-        </td>
-      </tr>
-      <!--Content-->
-      <tr>
-        <td>1</td>
-        <td>{{item1.level}}</td>
-        <td>{{item1.yearLicense}}</td>
+          <td><input type="radio" class="" formControlName="now" [value]="item.now"></td>
+          <td>
+            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <span class="action-icon"><i class="fa fa-lock"></i></span>
+          </td>
+        </tr>
+        <!--Content-->
+        <tr>
+          <td>1</td>
+          <td>{{item1.level}}</td>
+          <td>{{item1.yearLicense}}</td>
 
-        <td><input type="radio" class="" formControlName="now" [value]="item1.now"></td>
-        <td>
-          <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-          <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-          <span class="action-icon"><i class="fa fa-lock"></i></span>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+          <td><input type="radio" class="" formControlName="now" [value]="item1.now"></td>
+          <td>
+            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <span class="action-icon"><i class="fa fa-lock"></i></span>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
 </form>
-
+</div>
 
 <modal #politicModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
