--- a/src/app/personnels/info-person/process-evention/process-evention.component.html
+++ b/src/app/personnels/info-person/process-evention/process-evention.component.html
@@ -1,13 +1,13 @@
+<div class="form-item">
+  <div class="form-item-title">
+    Quá trình  phát minh
+  </div>
 <form action="" [formGroup]="formData">
-  <div class="action-form">
+  <div class="action-form" style="margin-bottom: 10px;">
     <button>Ghi nhận </button>
     <button>Khóa dữ liệu</button>
   </div>
 
-  <div class="form-item">
-    <div class="form-item-title">
-      Quá trình giảng dạy
-    </div>
     <div class="table-responsive">
       <table class="table table-bordered">
         <thead>
@@ -42,9 +42,9 @@
         </tbody>
       </table>
     </div>
-  </div>
-</form>
 
+</form>
+</div>
 
 
 <modal #evention size='lg' cssClass="my-modal-lg" backdrop="false">
