--- a/src/app/personnels/info-person/publish-info/publish-info.component.html
+++ b/src/app/personnels/info-person/publish-info/publish-info.component.html
@@ -1,52 +1,47 @@
-<form>
-  <div class="action-form">
-    <button>Ghi nhận</button>
-    <button>Khóa dữ liệu</button>
+<div class="form-item">
+  <div class="form-item-title">
+    Hoạt động xuất bản
   </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="form-item">
-        <div class="form-item-title">
-         Hoạt động xuất bản
-        </div>
-        <div class="table-responsive">
-          <table class="table table-bordered">
-            <thead>
-            <tr>
-              <th>STT</th>
-              <th>Tên sách</th>
-              <th>Năm xuất bản</th>
-              <th>Nhà xuất bản</th>
-              <th>Vai trò</th>
-              <th>
-                <span class="action-icon" (click)="openModal(publish)"><i class="fa fa-plus"></i></span>
-              </th>
-            </tr>
-            </thead>
-            <tbody>
-            <!--content-->
-            <tr *ngFor="let item of listPublish.toArray();let i = index">
-              <td>{{i+1}}</td>
-              <td>{{item.name}}</td>
-              <td>{{item.year}}</td>
-              <td>{{item.publishCompany}}</td>
-              <td>{{item.role}}</td>
-              <td>
-                <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-                <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-                <span class="action-icon"><i class="fa fa-lock"></i></span>
-              </td>
-            </tr>
-
-            </tbody>
-          </table>
-        </div>
-      </div>
+  <form>
+    <div class="action-form" style="margin-bottom: 10px;">
+      <button>Ghi nhận</button>
+      <button>Khóa dữ liệu</button>
     </div>
-  </div>
-</form>
+    <div class="table-responsive">
+      <table class="table table-bordered">
+        <thead>
+        <tr>
+          <th>STT</th>
+          <th>Tên sách</th>
+          <th>Năm xuất bản</th>
+          <th>Nhà xuất bản</th>
+          <th>Vai trò</th>
+          <th>
+            <span class="action-icon" (click)="openModal(publish)"><i class="fa fa-plus"></i></span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <!--content-->
+        <tr *ngFor="let item of listPublish.toArray();let i = index">
+          <td>{{i+1}}</td>
+          <td>{{item.name}}</td>
+          <td>{{item.year}}</td>
+          <td>{{item.publishCompany}}</td>
+          <td>{{item.role}}</td>
+          <td>
+            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <span class="action-icon"><i class="fa fa-lock"></i></span>
+          </td>
+        </tr>
 
+        </tbody>
+      </table>
+    </div>
+  </form>
 
+</div>
 
 <modal #publish size='lg' cssClass="my-modal-lg" backdrop="false">
 
