--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -1,58 +1,60 @@
-<form [formGroup]="formMain">
-  <div class="action-form">
-    <button>Khóa dữ liệu</button>
+<div class="form-item">
+  <div class="form-item-title">
+    Lịch sử lương
   </div>
-  <div class="row">
-
-    <div class="col-xs-12">
-      <div class="form-item">
-        <div class="form-item-title">
-          Danh sách
-        </div>
-        <div class="table-responsive">
-          <table class="table table-bordered">
-            <thead>
-            <tr>
-              <th>STT</th>
-              <th>Từ ngày</th>
-              <th>Đến ngày</th>
-              <th>Ngạch</th>
-              <th>Bậc</th>
-              <th>HSL</th>
-              <th>Số QD</th>
-              <th>Hiên tại</th>
-              <th>  <span class="action-icon" (click)="openModal(modalSalary)"><i class="fa fa-plus"></i></span></th>
-            </tr>
-            </thead>
-            <tbody>
-            <!---->
-            <tr *ngFor="let item of listSalaryBrief.toArray();let i = index ">
-              <td>{{i+1}}</td>
-              <td>{{item.dateFrom}}</td>
-              <td>{{item.dateEnd}}</td>
-              <td>{{item.brief}}</td>
-              <td>{{item.level}}</td>
-              <td>{{item.factorSalary}}</td>
-              <td>{{item.numberDecide}}</td>
-              <td>
-                <input type="radio" style="width: auto" formControlName="now" [value]="i">
-              </td>
-              <td>
-                <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-                <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove"></i></span>
-                <span class="action-icon" (click)="blockItem(i)"><i class="fa fa-lock"></i></span>
-              </td>
-            </tr>
-            <!---->
-            </tbody>
-          </table>
+  <form [formGroup]="formMain">
+    <div class="action-form">
+      <button>Khóa dữ liệu</button>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-item">
+          <div class="form-item-title">
+            Danh sách
+          </div>
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead>
+              <tr>
+                <th>STT</th>
+                <th>Từ ngày</th>
+                <th>Đến ngày</th>
+                <th>Ngạch</th>
+                <th>Bậc</th>
+                <th>HSL</th>
+                <th>Số QD</th>
+                <th>Hiên tại</th>
+                <th>  <span class="action-icon" (click)="openModal(modalSalary)"><i class="fa fa-plus"></i></span></th>
+              </tr>
+              </thead>
+              <tbody>
+              <!---->
+              <tr *ngFor="let item of listSalaryBrief.toArray();let i = index ">
+                <td>{{i+1}}</td>
+                <td>{{item.dateFrom}}</td>
+                <td>{{item.dateEnd}}</td>
+                <td>{{item.brief}}</td>
+                <td>{{item.level}}</td>
+                <td>{{item.factorSalary}}</td>
+                <td>{{item.numberDecide}}</td>
+                <td>
+                  <input type="radio" style="width: auto" formControlName="now" [value]="i">
+                </td>
+                <td>
+                  <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+                  <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove"></i></span>
+                  <span class="action-icon" (click)="blockItem(i)"><i class="fa fa-lock"></i></span>
+                </td>
+              </tr>
+              <!---->
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <!---->
-</form>
+  </form>
+</div>
 
 <modal #modalSalary size='lg' cssClass="my-modal-lg" backdrop="false">
 
